[package]
name = "jni-utils"
version = "0.1.0"
authors = ["Gedgy Gedgy <gedgygedgy@protonmail.com>", "Kyle Machulis <kyle@nonpolynomial.com>"]
edition = "2021"
license = "BSD-3-Clause"
description = "Extra Utilities for JNI in Rust"
readme = "README.md"
repository = "https://github.com/deviceplug/jni-utils-rs"
homepage = "https://github.com/deviceplug/jni-utils-rs"


[lib]
path = "rust/lib.rs"

[features]
build-java-support = []

[dependencies]
jni = "0.19.0"
static_assertions = "1.1.0"
uuid = "1.1.2"
futures = "0.3.21"
dashmap = "5.3.4"
once_cell = "1.13.0"
log = "0.4.17"

[dev-dependencies]
lazy_static = "1.4.0"
