[package]
name = "rust_android"
version = "0.1.0"
authors = ["M&M <info@mm-software.com>"]
rust-version = "1.60"
edition = "2021"

[lib]
name = "rust_android"
crate-type = ["cdylib"]

[dependencies]
rust-core = {path= "../rust-core"}
log4rs = "1.2.0"
chrono = "0.4.22"
log = "0.4.0"
tokio = { version = "1.20.1", features = ["macros", "rt", "rt-multi-thread"] }
btleplug = { version = "0.10", features = ["serde"] }
thiserror = "1.0.31"
pretty_env_logger = "0.4.0"
log-panics = { version = "2", features = ["with-backtrace"]}

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.20.0", default-features = false }
cargo-ndk = "2.12.2"
