[package]
name = "rust_android"
version = "0.1.0"
authors = ["M&M <info@mm-software.com>"]
rust-version = "1.60"
edition = "2021"

[lib]
name = "rust_android"
crate-type = ["cdylib"]

[dependencies]
rust-core = {path= "../rust-core"}

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.20.0", default-features = false }
