[package]
name = "rust_android"
version = "0.1.0"
authors = ["M&M <info@mm-software.com>"]
rust-version = "1.60"
edition = "2021"

[lib]
name = "rust_android"
crate-type = ["cdylib"]

[dependencies]
rust-core = {path= "../rust-core"}
btleplug = { version = "0.10", features = ["serde"] }

[target.'cfg(target_os="android")'.dependencies]
jni = "0.19.0"


[profile.release-with-debug]
inherits = "release"
debug = true
