[package]
name = "rust-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log4rs = "1.2.0"
chrono = "0.4.22"
tokio = { version = "1.23.0", features = ["full"] }
btleplug = { version = "0.10" }
thiserror = "1.0.31"
pretty_env_logger = "0.4.0"

#logging
log = "*"
log-panics="*"
android_logger = "*"
